# inter-building-lwr-simulation-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_commands.md  main_trigger_pipeline.py  pyproject.toml  requirements.txt
.github/agents/: code_agent.agent.md
.github/workflows/: ci.yaml  ci.yml
app/: __init__.py  config.py  main.py  schemas.py  utils.py
app/core/pipeline_logic/: __init__.py  lwr_pre_processing.py  lwr_simulation.py  post_processing.py  pre_processing.py  vf_computation.py
app/routers/: initialization.py  simulations.py
app/services/: __init__.py  auth.py  orchestrator.py  state_manager.py  task_helpers.py
app/workers/: __init__.py  celery_app.py  tasks.py
app/workers/tasks/: __init__.py  task_lwr_preprocessing.py  task_lwr_simulation.py  task_postprocessing.py  task_pre_processing.py  task_vf_comp.py
tests/: conftest.py
tests/integration/: test_auth.py  test_initialization.py
tests/integration/api/: test_initialization.py  test_simulation_api.py
tests/integration/workflow/: test_simulation_pipeline.py
tests/unit/: test_schemas.py
tests/unit/services/: test_orchestrator.py  test_state_manager.py
tests/unit/workers/: test_celery_app.py  test_task.py
